# rag-youtube-transcript

./: README.md  main.py  pyproject.toml  requirements.txt
data/: chunked_docs.pkl
data/faiss_index/: index.pkl
notebooks/: 01_data_ingestion.ipynb  02_chunk_analysis.ipynb  02_semantic_chunking.ipynb  03_embedding_retrieval.ipynb  03_vector_indexing.ipynb  04_rag_pipelines.ipynb  04_rag_query_engine.ipynb
notebooks/data/faiss_index/: index.faiss  index.pkl
